--- a/package.json
+++ b/package.json
@@ -4,11 +4,29 @@
   "description": "Boilerplate project for static websites",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server --open"
   },
   "author": "Damir Garifullin",
   "license": "GPL-3.0",
   "devDependencies": {
-    "webpack": "^3.3.0"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.29.0",
+    "node-sass": "^4.5.3",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.5.1"
+  },
+  "dependencies": {
+    "bootstrap": "4.0.0.alpha-6",
+    "jquery": "^3.2.1",
+    "tether": "^1.4.0"
   }
 }
